<?xml version="1.0"?>
<package format="2">
  <name>global_planner</name>
  <version>0.0.0</version>
  <description>The global_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kilox@todo.todo">kilox</maintainer>
  <license>TODO</license>  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
