<?xml version="1.0"?>
<package format="2">
  <name>dwa_controller</name>
  <version>0.0.0</version>
  <description>The local_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="kilox@todo.todo">kilox</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
    <build_depend>cmake_modules</build_depend>

    <depend>base_local_planner</depend>
    <depend>costmap_2d</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>eigen</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>sensor_msgs</depend>
    <depend>roscpp</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
